particles zoom, space particles + new class

--- a/main.css
+++ b/main.css
@@ -1,5 +1,29 @@
 body {
   margin: 0;
   /* background: rgb(255, 255, 255); */
-  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgb(197, 213, 228) 100%);
+  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgb(236, 240, 243) 100%);
+}
+
+#gui {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: url("img/gui_bottom.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  /* background-color: red; */
+  width: 300px;
+  height: 128px;
+}
+
+#logo {
+  position: absolute;
+  top: 30px;
+  left: 40px;
+  background-image: url("img/logo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  /* background-color: red; */
+  width: 300px;
+  height: 43px;
 }
